# cautus-scanner

./: .gitignore  AGENTS.md  README.md  pyproject.toml  scanner.yaml  scanner.yaml.example
data/: catalysts.csv.example  float_data.csv.example  universe.csv.example
scripts/: run_scanner.py
src/scanner/: __init__.py  config.py  exceptions.py  models.py  module.py
src/scanner/engine/: __init__.py  cache.py
src/scanner/pillars/: __init__.py  base.py  catalyst.py  float_size.py  momentum.py  price.py  volume.py
src/scanner/providers/: __init__.py  base.py  csv_fundamentals.py  csv_news.py  csv_universe.py  factory.py  ibkr_market_data.py  ibkr_universe.py  mock_market_data.py
src/scanner/utils/: time_utils.py
tests/integration_tests/: __init__.py  test_ibkr.py
tests/smoke_tests/: __init__.py  test_invariants.py
tests/unit_tests/: __init__.py  test_pillars.py
